--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -15,7 +15,9 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "react-weathericons": "^1.0.4",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
